--- a/EmployeeSQL/BONUS.ipynb
+++ b/EmployeeSQL/BONUS.ipynb
@@ -559,13 +559,13 @@
     "plt.xlabel(\"Employee Corporate Title\")\n",
     "plt.title(\"Average Employee Salary by Corporate Title\")\n",
     "\n",
-    "plt.savefig(\"../EmployeeSQL/Average Employee Salary by Corporate Title.png\")\n",
+    "plt.savefig(\"../Images/Average Employee Salary by Corporate Title.png\")\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -590,9 +590,16 @@
     "plt.xlabel('Salary Range USD')\n",
     "plt.ylabel('Number of Employees')\n",
     "\n",
-    "plt.savefig(\"../EmployeeSQL/The Most Common Salary Ranges For Employees.png\")\n",
+    "plt.savefig(\"../Images/The Most Common Salary Ranges For Employees.png\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
